--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,26 @@
-# This .gitignore is appropriate for repositories deployed to GitHub Pages and using
-# a Gemfile as specified at https://github.com/github/pages-gem#conventional
 
-# Basic Jekyll gitignores (synchronize to Jekyll.gitignore)
-_site/
-.sass-cache/
-.jekyll-cache/
-.jekyll-metadata
+# Node modules
+node_modules/
 
-# Additional Ruby/bundler ignore for when you run: bundle install
-/vendor
+# Next.js build output
+.next/
 
-# Specific ignore for GitHub Pages
-# GitHub Pages will always use its own deployed version of pages-gem 
-# This means GitHub Pages will NOT use your Gemfile.lock and therefore it is
-# counterproductive to check this file into the repository.
-# Details at https://github.com/github/pages-gem/issues/768
-Gemfile.lock
+# Vercel build output
+.vercel/
+
+# Environment files
+.env.local
+.env.*
+
+# Lock files (if you regenerate them)
+package-lock.json
+yarn.lock
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS or editor folders
+.DS_Store
+.vscode/
